# Mini-AUTOSAR

mini-autosar-fla/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
mini-autosar-fla/config/: ecu_config.yaml
mini-autosar-fla/docs/: architecture.md  software_components_interaction.md  software_components_interaction.puml
mini-autosar-fla/docs/modules/: BlinkController_spec.md
mini-autosar-fla/scripts/: gen_config.py
mini-autosar-fla/src/app/: BlinkController.c  BlinkController.h  ButtonReader.c  ButtonReader.h  Heartbeat.c  Heartbeat.h
mini-autosar-fla/src/bsw/: Det.c  Det.h  Dio.c  Dio.h  Dio_Cfg.h  EcuM.c  EcuM.h  Gpt.c  Gpt.h
mini-autosar-fla/src/mcal/: Mcal_Dio.c  Mcal_Dio.h  Mcal_Gpt.c  Mcal_Gpt.h
mini-autosar-fla/src/rte/: Rte.c  Rte.h  Rte_Cfg.h  Rte_Types.h
mini-autosar-fla/tests/: CMakeLists.txt  minitest.c  minitest.h  test_BlinkController.c  test_ButtonReader.c  test_Det.c  test_Heartbeat.c  test_Mcal_Dio.c
